fixed overflow

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,6 @@
 .gallery {
   padding: 0 0 100px;
+  overflow-x: hidden;
 
   @include onTablet {
     padding: 0 0 92px;
