--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,7 +3,6 @@
   font-style: normal;
   color: $color-text-main;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 
   &__body {
     margin: 0;
